--- a/index.html
+++ b/index.html
@@ -8,30 +8,27 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">
-            <input readonly>
+        <div id="screen-div">
+            <input class="screen" type="text" readonly>
         </div>
         <div class="buttons">
-            <button onclick="appendtoDisplay('+')">+</button>
-            <button onclick="appendtoDisplay('7')">7</button>
-            <button onclick="appendtoDisplay('8')">8</button>
-            <button onclick="appendtoDisplay('9')">9</button>
-            <button onclick="appendtoDisplay('-')">-</button>
-            <button onclick="appendtoDisplay('4')">4</button>
-            <button onclick="appendtoDisplay('5')">5</button>
-            <button onclick="appendtoDisplay('6')">6</button>
-            <button onclick="appendtoDisplay('*')">*</button>
-            <button onclick="appendtoDisplay('1')">1</button>
-            <button onclick="appendtoDisplay('2')">2</button>
-            <button onclick="appendtoDisplay('3')">3</button>
-            <button onclick="appendtoDisplay('/')">/</button>
-            <button onclick="appendtoDisplay('0')">0</button>
-            <button onclick="appendtoDisplay('.')">.</button>
-            <button onclick="calculate()">=</button>
-            <button onclick="clearDisplay()">C</button>
-
+            <button class="operator">+</button>
+            <button class="operand">7</button>
+            <button class="operand">8</button>
+            <button class="operand">9</button>
+            <button class="operator">-</button>
+            <button class="operand">4</button>
+            <button class="operand">5</button>
+            <button class="operand">6</button>
+            <button class="operator">*</button>
+            <button class="operand">1</button>
+            <button class="operand">2</button>
+            <button class="operand">3</button>
+            <button class="operator">/</button>
+            <button class="equal">=</button>
+            <button class="operand">0</button>
+            <button class="clear" onclick="clearDisplay()">C</button>
         </div>
-        
     </div>
     <script src="script.js" defer></script>
 </body>
