Add calculation functions and removed eval()

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="operator">/</button>
             <button class="equal">=</button>
             <button class="operand">0</button>
-            <button class="clear" onclick="clearDisplay()">C</button>
+            <button class="clear">C</button>
         </div>
     </div>
     <script src="script.js" defer></script>
