Remove the need of Equals button and add backspace button
When an expression is found in the screen, it evaluates the expression without the need of clicking equals button.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=backspace" />
 </head>
 <body>
     <div id="calculator">
@@ -25,7 +26,11 @@
             <button class="operand">2</button>
             <button class="operand">3</button>
             <button class="operator">/</button>
-            <button class="equal">=</button>
+            <button class="backspace">
+                <span class="material-symbols-outlined">
+                    backspace
+                </span>
+            </button>
             <button class="operand">0</button>
             <button class="clear">C</button>
         </div>
